[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/World/World.gd" type="Script" id=1]
[ext_resource path="res://Scene/Background/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scene/Enemy_generator/Enemy_generator.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scene/UI/PlayerHealthBar/PlayerHealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scene/UI/GameOver/GameOver.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Font/pixelated.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[node name="World" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 100, 212 )

[node name="Enemy_generator" parent="." instance=ExtResource( 4 )]
position = Vector2( 1252.98, 249.163 )

[node name="UI" type="CanvasLayer" parent="."]

[node name="Start" type="Control" parent="UI"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -504, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
color = Color( 0.356863, 0.356863, 0.356863, 0.27451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Start"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -210.0
margin_top = -77.0
margin_right = 210.0
margin_bottom = 77.0
focus_mode = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Start/VBoxContainer"]
margin_right = 420.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Game Title"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="UI/Start/VBoxContainer"]
pause_mode = 2
margin_top = 112.0
margin_right = 420.0
margin_bottom = 154.0
custom_fonts/font = SubResource( 2 )
text = "Start"
flat = true

[node name="Control" type="Control" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHealthBar" parent="UI/Control" instance=ExtResource( 5 )]
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.98
anchor_right = 1.0
anchor_bottom = 0.033
margin_left = -92.0
margin_top = 16.0
margin_right = -84.0
margin_bottom = 8.16
rect_scale = Vector2( 4, 4 )

[node name="ScoreLabel" type="Label" parent="UI/Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -248.0
margin_top = 8.0
margin_right = -120.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 3 )
text = "Score: ##"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" parent="UI" instance=ExtResource( 6 )]
visible = false

[connection signal="create_bullet" from="Player" to="." method="_on_Player_create_bullet"]
[connection signal="player_damaged" from="Player" to="." method="_on_Player_player_damaged"]
[connection signal="create_enemy" from="Enemy_generator" to="." method="_on_Enemy_generator_create_enemy"]
[connection signal="pressed" from="UI/Start/VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="UI/GameOver/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]

[editable path="UI/GameOver"]
